# src/model/models.ts
@@ -1,1 +1,2 @@
 export * from './sample';
+export * from './validationError';
